# vinel

./: $  .gitignore  Cargo.toml  README.md  Readme.asciidoc
autoload/: eval.vim  evaluator.vim  printer.vim  reader.vim  vars.vim  vinel.vim
client/: Cargo.toml
client/src/: main.rs
docs/: commands_reference.md
examples/: vimrc.vil  vimrc.vim
server/: Cargo.toml
server/src/: commands.rs  main.rs
src/: compiler.rs  lexer.rs  main.rs  parser.rs  tests.rs
src/compiler/: any.rs  call.rs  colorscheme.rs  cond.rs  defun.rs  dict.rs  edit.rs  get.rs  let.rs  map.rs  mark.rs  operator.rs  raw.rs  set.rs  source.rs  tabs.rs
