[package]
name = "vimlisp"
version = "0.1.0"
authors = ["Wafelack <wafelack@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vil"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]

