[package]
name = "vinal"
version = "0.1.0"
authors = ["Wafelack <wafelack@protonmail.com>"]
edition = "2018"
description = "Vinal Is Not A Lisp - Scripting language compiling to VimL."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
clap = "2.33.3"
